--- a/src/Style.css
+++ b/src/Style.css
@@ -1,5 +1,21 @@
+body {
+    margin: 0;
+}
+
+.navbar {
+    height: 100px;
+    background-color: #333;
+    color: whitesmoke;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
     color: #c92727;
 }
 
@@ -16,3 +32,6 @@ a:hover {
     color: black;
 }
 
+label {
+    display: block;
+}
